[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Red-Commons"
readme = "README.md"
authors = [
    {name = "Cog Creators"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

[project.urls]
"Issue Tracker" = "https://github.com/Cog-Creators/Red-Commons/issues"
"Source Code" = "https://github.com/Cog-Creators/Red-Commons"

[project.optional-dependencies]
dev = [
    "black==22.1.0",
    "flake8==4.0.1",
    "isort==5.10.1",
]

[tool.flit.module]
name = "red_commons"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 99
combine_as_imports = true
filter_files = true
